--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,86 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+from tkinter import*
+from tkinter.font import *
+#import math
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+def calc(number):
+    global adad
+    #valau=(entry.get())
+    adad=adad+str(number)
+    voroodi.set(adad)
+def clear():
+    global adad
+    adad="" 
+    voroodi.set(adad)
+#def delet():
+    #entry.delet(END)
+def out():
+    global adad
+    out_put=str(eval(adad))
+    print(out_put)
+    voroodi.set(out_put)
+    adad=out_put
+    
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+window=Tk()
+window.title('simple Calculater')
+adad=""
+voroodi=StringVar()
+my_font=Font(family='arial',size=19)
+my_font_s=Font(family='conso',size=20)
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+#lab=Label(window,text='simple caceulation')
+#lab.grid(row=0,column=0,sticky=E+N,padx=100)
+#tm.sleep(4)
+lab=Label(window,text='design by Abolfazl',font=('arial',10,'bold'))
+lab.grid(row=0,column=0,sticky=E+N,padx=100)
+#tm.sleep(2)
+#lab=Label(window,text='')
+#lab.grid(row=0,column=0,sticky=E+N,padx=100)
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+entry=Entry(window,font=('Bnazanin',20,'bold'),textvariable=voroodi,bg="powder blue",justify= 'left',bd=30)
+entry.grid(row=1,column=0,columnspan=4)
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+button_plus=Button(window,text='+',font=('arial',20,'bold'),command=lambda:calc("+"),bd=8)
+button_plus.grid(row=2,column=0,sticky=E+N,padx=10)
+button_sum=Button(window,text='--',font=('arial',20,'bold'),command=lambda:calc("-"),bd=8)
+button_sum.grid(row=3,column=0,sticky=E+N,padx=10)
+button_div=Button(window,text='÷',font=('arial',20,'bold'),command=lambda:calc("/"),bd=8)
+button_div.grid(row=4,column=0,sticky=E+N,padx=10,pady=0)
+button_zarb=Button(window,text='×',font=('arial',20,'bold'),command=lambda:calc("*"),bd=8)
+button_zarb.grid(row=5,column=0,sticky=E,padx=10,pady=0)
+button_mosavi=Button(window,text='=',font=('arial',20,'bold'),command=out,bd=8)
+button_mosavi.grid(row=6,column=0,sticky=E,padx=10,pady=0)
+button_dot=Button(window,text='.',font=('arial',20,'bold'),command=lambda:calc("."),bd=8)
+button_dot.grid(row=5,column=0,sticky=W,padx=65,pady=5)
+#button_cos=Button(window,text='cos(',font=('arial',20,'bold'),command=lambda:calc("cos"),bd=8)
+#button_cos.grid(row=2,column=0,sticky=W,padx=225,pady=5)
+button_zero=Button(window,text='0',font=('arial',20,'bold'),command=lambda:calc("0"),bd=8)
+button_zero.grid(row=2,column=0,sticky=W,padx=10,pady=5)
+button_one=Button(window,text='1',font=('arial',20,'bold'),command=lambda:calc(1),bd=8)
+button_one.grid(row=2,column=0,sticky=W,padx=65,pady=5)
+button_two=Button(window,text='2',font=('arial',20,'bold'),command=lambda:calc("2"),bd=8)
+button_two.grid(row=2,column=0,sticky=W,padx=121,pady=5)
+button_three=Button(window,text='3',font=('arial',20,'bold'),command=lambda:calc("3"),bd=8)
+button_three.grid(row=3,column=0,sticky=W,padx=10,pady=5)
+button_four=Button(window,text='4',font=('arial',20,'bold'),command=lambda:calc("4"),bd=8)
+button_four.grid(row=3,column=0,sticky=W,padx=65,pady=5)
+button_five=Button(window,text='5',font=('arial',20,'bold'),command=lambda:calc("5"),bd=8)
+button_five.grid(row=3,column=0,sticky=W,padx=121,pady=5)
+button_six=Button(window,text='6',font=('arial',20,'bold'),command=lambda:calc("6"),bd=8)
+button_six.grid(row=4,column=0,sticky=W,padx=10,pady=5)
+button_seven=Button(window,text='7',font=('arial',20,'bold'),command=lambda:calc("7"),bd=8)
+button_seven.grid(row=4,column=0,sticky=W,padx=65,pady=5)
+button_eight=Button(window,text='8',font=('arial',20,'bold'),command=lambda:calc("8"),bd=8)
+button_eight.grid(row=4,column=0,sticky=W,padx=121,pady=5)
+button_nine=Button(window,text='9',font=('arial',20,'bold'),command=lambda:calc("9"),bd=8)
+button_nine.grid(row=5,column=0,sticky=W,padx=10,pady=5)
+button_triangle=Button(window,text='#',font=('arial',20,'bold'),command=lambda:calc("#"),bd=8)
+button_triangle.grid(row=5,column=0,sticky=W,padx=121,pady=5)
+#button_delet=Button(window,text='delet',font=my_font_s,command=delet)
+#button_delet.grid(row=5,column=0,padx=65,pady=5)
+button_clear=Button(window,text='clear',font=('arial',20,'bold'),command=clear,bd=20,bg='green')
+button_clear.grid(row=6,column=0,padx=10,pady=5,columnspan=2,sticky=W+N)
+window.mainloop()
+#2023   January  27   , Friday 
+#V.1
